# MadDevsTestTask

./: .pre-commit-config.yaml  README.md  TASK.md
python/: requirements.txt
python/src/: calculations.py  candlesticks.py  main.py  subscriptions.py
rust/: Cargo.toml
rust/src/: calculations.rs  candlesticks.rs  main.rs  subscriptions.rs
