[package]
name = "test-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188",features = ["derive"] }
futures-util = {version = "0.3.28"}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
chrono = "0.4.28"
